# lick

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: bleeding-edge.yaml  cd.yml  ci.yml
lick/: __init__.py  lick.py
lick/_vendor/vectorplot/: core.pyx
requirements/: tests.txt  typecheck.txt
src/lick/: __init__.py  lick.py
src/lick/_vendor/vectorplot/: LICENSE.txt  core.pyx
tests/: conftest.py  test_image_comp.py  test_single_prec.py
