[build-system]
requires = [
    "setuptools>=61.2",
    "Cython>=3.0",
    "numpy>=1.25, <2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lick"
version = "0.5.0"
description = "Package that uses a Line Integral Convolution library to clothe a 2D field (ex: density field) with a LIC texture, given two vector fields (ex: velocity (vx, vy))"
authors = [
    { name = "G. Wafflard-Fernandez" },
	{ name = "C.M.T. Robert" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.4.0",
    # keep in sync with NPY_TARGET_VERSION (setup.py)
    # https://github.com/scipy/oldest-supported-numpy/issues/76#issuecomment-1628865694
    "numpy>=1.19.3,<2.0",
    "scikit-image>=0.18.1",
    "scipy>=1.5.4",
    "packaging>=20.9",
]

[project.license]
text = "GPL-3.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
lick = "lick.lick:lick"

[project.urls]
Homepage = "https://github.com/volodia99/lick"

[tool.ruff]
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["lick"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true # matplotlib and skimage don't have stubs yet
show_error_codes = true
pretty = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
]

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
