[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lick"
version = "0.7.1" # keep in sync with __version__
description = "A high level Line Integral Convolution (LIC) library, including post-processing and visualization"
authors = [
    { name = "G. Wafflard-Fernandez" },
	{ name = "C.M.T. Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: Matplotlib",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.2, <3",
    "rlic>=0.2.1",
    "scipy>=1.7.2",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/volodia99/lick"

[tool.flit.sdist]
include = ["CITATION.cff"]

[tool.ruff.lint]
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lick"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true # mpl_toolkits doesn't have stubs yet
show_error_codes = true
pretty = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
]

[dependency-groups]
test = [
    "pytest>=6.1.0",
    "pytest-mpl>=0.16.1",
]
typecheck = [
    "matplotlib>=3.8.1",
    "mypy>=1.15.0",
]
