[metadata]
name = lick
version = 0.0.0
description = Package that uses a Line Integral Convolution library to clothe a 2D field (ex: density field) with a LIC texture, given two vector fields (ex: velocity (vx, vy))
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/volodia99/lick
author = G. Wafflard-Fernandez
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    scipy
    licplot>=1.0.5
    scikit-image>=0.18.1
    cblind

[options.entry_points]
console_scripts =
    lick = lick.lick:lick

[options.extras_require]
dev =
    pytest>=6.1
